--- a/views/01_永續經營_m.twig
+++ b/views/01_永續經營_m.twig
@@ -1,16 +1,13 @@
 {# index.twig #}
-{% extends "/_template/layout.twig" %}
-{% block page %}
-
-
-
+{% extends "/_template/layout_m.twig" %}
+{% block page_m %}
 
 <article class="common_article">
-
 <h1 class="title_h2">關鍵指標與績效</h1>
 <h3>2015和2016年績效亮點</h2>
-
-<h2 class="common_h2">運輸（Transportation）-安全運輸，拉近距離</h2>
+<div class="articleTitle">
+	<h2 class="articleTitleContent">運輸（Transportation）-安全運輸，拉近距離</h2>
+</div>
 <ul class="ul_kind1">
 	<li>自2007年營運以來，列車準點率及發車率皆達99%以上</li>
 	<li>營運迄今（2007年1月5日至2016年12月底）每組營運列車平均延誤時間為0.23分鐘</li>
@@ -19,8 +16,9 @@
 	<li>強化台灣產業供應能力，推動採購在地化，於2015與2016年間的勞務採購皆超過9成以上，物料採購亦超過5成</li>
 	<li>2015年連續假期共疏運839.5萬人次，2016年連續假期共疏運1,169.4萬人次</li>
 </ul>
-
-<h2 class="common_h2">科技（Technology）-創新低碳，暖心服務 </h2>
+<div class="articleTitle">
+<h2 class="articleTitleContent">科技（Technology）-創新低碳，暖心服務 </h2>
+</div>
 <ul class="ul_kind1">
 	<li>自主研發之系統「列車座位查詢系統（SMIS）」於2015年9月取得經濟部專利</li>
 	<li>於「第23屆智慧運輸世界大會」（23rd ITS World Congress Melbourne 2016）以「台灣高鐵智慧運輸服務系統」榮獲2016年ITS世界大會名人堂產業成就獎</li>
@@ -32,8 +30,9 @@
 	<li>全車隊於2016年1月完成「列車燈管更換 LED 計畫」。2013年11月至2016年12月底，累計節電334.5萬度及減少1,762公噸的CO2e</li>
 	<li>2016年11月燕巢總機廠參加經濟部水利署「105年節約用水績優單位選拔」，榮獲商業組節約用水績優單位之殊榮</li>
 </ul>
-
-<h2 class="common_h2">在地（Taiwan）-繁榮在地，暢遊台灣</h2>
+<div class="articleTitle">
+<h2 class="articleTitleContent">在地（Taiwan）-繁榮在地，暢遊台灣</h2>
+</div>
 <ul class="ul_kind1">
 	<li>董事會於2016年通過「企業社會責任實務守則」，結合核心資源實踐企業社會責任</li>
 	<li>旅遊商品行程2015年高鐵假期130條以上，旅行社自組商品2,800條以上；2016年高鐵假期150條以上，旅行社自組商品3,000條以上</li>
@@ -42,10 +41,11 @@
 	<li>2015年辦理35件參訪，參訪人數1,049人；2016年辦理35件，參訪人數844人</li>
 </ul>
 
+<div class="articleTitle">
+<h2 class="articleTitleContent">關懷（Touch）-價值創造，關懷社會</h2>
+</div>
 
-<h2 class="common_h2">關懷（Touch）-價值創造，關懷社會</h2>
 <ul class="ul_kind1">
-
 	<li>培育員工不遺餘力，2015與2016年人均受訓時數分別為826小時與502小時，並於兩年中培育出59位內部合格講師</li>
 	<li>為確保員工健康，提供優於法令的健康檢查方案，2015與2016年皆超過2千名員工受惠</li>
 	<li>推廣鐵道產學合作，與四間大學合作共26個計畫案，並推廣大學生暑期實習與維修實習專案，於2015與2016年共有100位大專實習生，30位技術實習生參與計畫</li>
@@ -60,10 +60,4 @@
 
 
 
-
-
-
-
-
-
-{% endblock %} -->
+{% endblock %}
