--- a/views/_template/layout_m.twig
+++ b/views/_template/layout_m.twig
@@ -8,15 +8,13 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <title>台灣高鐵</title>
-
-
 <link href="css/CSSDEV.css" rel="stylesheet" type="text/css" />
-
-
+</head>
 <!--以上為設計使用,不需要填入後台--> 
 
-<link href="/content/css/earlybird_preferent.css" rel="stylesheet" type="text" />
 
+
+<link href="/content/css/earlybird_preferent.css" rel="stylesheet" type="text" />
 <style type="text/css">.common_content_inner h3 { margin-bottom:8px; font-size:15px; color:#db5106;}
 .tb_L { width:378px;}
 .tacle_set { padding-left:14px;}
@@ -72,6 +70,7 @@ caption {
 .introduction{/*引言*/
 	/*font-size:17px;*/
 	font-size:1.2em;
+
 	font-weight:bold;
 	margin-bottom:15px;
 }
@@ -95,14 +94,12 @@ a.Interval2:hover { background:#cc6600}
 a.2line {padding-top: 18px;  height:45px;}
 </style>
 
-</head>
+
 <body>
 
 
 <div class="modArticle" >
-
-{% block page %}{% endblock %}
-
+{% block page_m %}{% endblock %}
 </div>
 
 
