--- a/views/_template/layout.twig
+++ b/views/_template/layout.twig
@@ -8,21 +8,23 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <title>台灣高鐵</title>
-
-
 <link href="css/css_reset.css"      rel="stylesheet" type="text/css" />
 <link href="css/innerCommon.css"      rel="stylesheet" type="text/css" />
 <link href="css/inner_pngFix.css"     rel="stylesheet" type="text/css" />
 <link href="css/inner_ticket.css"     rel="stylesheet" type="text/css" />
 <link href="css/inner_all_common.css" rel="stylesheet" type="text/css" />
 <link href="css/common_list_menu.css" rel="stylesheet" type="text/css" />
+</head>
 
 <!--以上為設計使用,不需要填入後台--> 
 
+
 <link href="/content/css/earlybird_preferent.css" rel="stylesheet" type="text" />
-
-
 <style type="text/css">
+
+
+
+
 
 .common_content_inner h3 { margin-bottom:8px; font-size:15px; color:#db5106;}
 .tb_L { width:378px;}
@@ -95,23 +97,37 @@ caption {
 
 a.Interval { background:#db6205; width:180px; padding:8px 10px;line-height:1.3; margin-right:8px; color:#fff; text-decoration:none; display:inline-block; height:55px; text-align:center; float:left; margin-bottom:20px;}
 a.Interval:hover { background:#cc6600}
-a.Interval2 { background:#db6205; width:180px; padding:8px 10px;line-height:1.3; margin-right:8px; color:#fff; text-decoration:none; display:inline-block; text-align:center; float:left; margin-bottom:20px;padding-top: 18px;  height:45px;>
+a.Interval2 { background:#db6205; width:180px; padding:8px 10px;line-height:1.3; margin-right:8px; color:#fff; text-decoration:none; display:inline-block; text-align:center; float:left; margin-bottom:20px;padding-top: 18px;  height:45px;}
 a.Interval2:hover { background:#cc6600}
 .IntervalNote { padding-left:5px;}
-a.2line {padding-top: 18px;  height:45px;}
+/*a.2line {padding-top: 18px;  height:45px;}*/
+
+.articleTitle{
+    background: #958875;
+}
+.articleTitle .articleTitleContent{
+	background-color: #f2f2f2;
+    border-left-width: 5px;
+    border-left-style: solid;
+    border-left-color: #dc5505;
+     font-size: 18px; 
+    /*font-size: 12em;*/
+    line-height: 32px;
+    color: #db5106;
+    height: 32px;
+    text-indent: 8px;
+    margin-bottom: 23px;
+    clear: both;
+}
+
+
 </style>
 
-</head>
 <body>
-
-
+	
 <div class="wrapper" style="font-size: 1.25em; line-height: 1.6">
-
 {% block page %}{% endblock %}
-
 </div>
-
-
 
 </body>
 </html>
