--- a/assets/sass/frog.sass
+++ b/assets/sass/frog.sass
@@ -1,16 +1,9 @@
 
 
-@import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css)
+// @import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css)
 
 
 
-// body
-// 	background: #FFF
-// 	font-family: 'Noto Sans TC', sans-serif 
-// 	-webkit-font-smoothing: antialiased
-// 	overflow-x: hidden
-// a 
-// 	color: #888
 .clear
 	clear: both
 .clearfix:before,.clearfix:after
@@ -25,13 +18,11 @@
 
 .questionnaire
 	width: 100%
-	border: 1px solid #c0c0c0
 	margin-top: 30px
-	padding: 20px
 	h6 
 		margin-bottom: 5px
 		margin-top: 15px
-		color: #dc5505	
+		color: #222
 	.check_item
 		float: left
 		margin-right: 20px
@@ -60,10 +51,26 @@
 		margin-bottom: 20px
 		tr
 			td 
-				border: 1px solid #eee
+				border: 1px solid #c0c0c0
 				padding: 8px 15px
 				font-size: 14px
 
 
+.faq_for_half
+	width: 50%
+	float: left
+
+
+.faq_form label 
+	width: 120px
+
+.submit_m
+	display: block
+	width: 120px
+	margin: 0 auto
+	padding: 5px 0
+	text-align: center
+	background-color: #888
+	color: #FFF
 
 
