--- a/assets/sass/frog_m.sass
+++ b/assets/sass/frog_m.sass
@@ -1,10 +1,7 @@
 
 
-@import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css)
-
-
-*, *:before, *:after
-  box-sizing: border-box
+// *, *:before, *:after
+//   box-sizing: border-box
 .clear
 	clear: both
 .clearfix:before,.clearfix:after
@@ -20,16 +17,15 @@
 .questionnaire
 	width: 90%
 	margin: 0 auto
-	border: 1px solid #c0c0c0
-	margin-top: 30px
-	padding: 20px
+	margin-top: 20px
+
 	p 
 		padding: 0
 		font-size: 14px
 	h6 
 		margin-bottom: 5px
 		margin-top: 15px
-		color: #dc5505	
+		color: #222
 	.check_item
 		float: left
 		margin-right: 20px
@@ -63,15 +59,25 @@
 		border-spacing: 0
 		margin-bottom: 20px
 		tr
-			td
-				width: 20% 
-				border: 1px solid #eee
+			td 
+				border: 1px solid #c0c0c0
 				padding: 8px 15px
-				font-size: 12px
+				font-size: 14px
 
 
+.faq_for_half
+	width: 50%
+	float: left
 
 
-
-
+.faq_form label 
+	width: 120px
+.submit_m
+	display: block
+	width: 100px
+	margin: 0 auto
+	padding: 5px 0
+	text-align: center
+	background-color: #888
+	color: #FFF
 
