--- a/public/css/frog.css
+++ b/public/css/frog.css
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css);
 .clear {
   clear: both; }
 
@@ -12,19 +11,14 @@
 .clearfix {
   zoom: 1; }
 
-*, *:before, *:after {
-  box-sizing: border-box; }
-
 .questionnaire {
   width: 100%;
-  border: 1px solid #c0c0c0;
-  margin-top: 30px;
-  padding: 20px; }
+  margin-top: 30px; }
 
 .questionnaire h6 {
   margin-bottom: 5px;
   margin-top: 15px;
-  color: #dc5505; }
+  color: #222; }
 
 .questionnaire .check_item {
   float: left;
@@ -66,6 +60,22 @@
   margin-bottom: 20px; }
 
 .questionnaire table tr td {
-  border: 1px solid #eee;
+  border: 1px solid #c0c0c0;
   padding: 8px 15px;
   font-size: 14px; }
+
+.faq_for_half {
+  width: 50%;
+  float: left; }
+
+.faq_form label {
+  width: 120px; }
+
+.submit_m {
+  display: block;
+  width: 120px;
+  margin: 0 auto;
+  padding: 5px 0;
+  text-align: center;
+  background-color: #888;
+  color: #FFF; }
