--- a/public/css/frog_m.css
+++ b/public/css/frog_m.css
@@ -1,7 +1,3 @@
-@import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css);
-*, *:before, *:after {
-  box-sizing: border-box; }
-
 .clear {
   clear: both; }
 
@@ -18,9 +14,7 @@
 .questionnaire {
   width: 90%;
   margin: 0 auto;
-  border: 1px solid #c0c0c0;
-  margin-top: 30px;
-  padding: 20px; }
+  margin-top: 20px; }
 
 .questionnaire p {
   padding: 0;
@@ -29,7 +23,7 @@
 .questionnaire h6 {
   margin-bottom: 5px;
   margin-top: 15px;
-  color: #dc5505; }
+  color: #222; }
 
 .questionnaire .check_item {
   float: left;
@@ -79,7 +73,22 @@
   margin-bottom: 20px; }
 
 .questionnaire table tr td {
-  width: 20%;
-  border: 1px solid #eee;
+  border: 1px solid #c0c0c0;
   padding: 8px 15px;
-  font-size: 12px; }
+  font-size: 14px; }
+
+.faq_for_half {
+  width: 50%;
+  float: left; }
+
+.faq_form label {
+  width: 120px; }
+
+.submit_m {
+  display: block;
+  width: 100px;
+  margin: 0 auto;
+  padding: 5px 0;
+  text-align: center;
+  background-color: #888;
+  color: #FFF; }
