--- a/views/_template/layout_m.twig
+++ b/views/_template/layout_m.twig
@@ -7,10 +7,23 @@
 <link rel="shortcut icon" href="/favicon.ico" />
 <meta name="keywords" content="">
 <meta name="description" content="">
-<title>台灣高鐵</title>
+<title>thsrc_m</title>
 
+<link href="css/css_reset.css" rel="stylesheet" type="text/css" />
+<link href="css/inner_pngFix.css" rel="stylesheet" type="text/css" />
+<link href="css/inner_ticket.css" rel="stylesheet" type="text/css" />
+
+<link href="css/jquery-ui-1.8.5.custom.css" rel="stylesheet" type="text/css" />
+<link href="css/jquery.ui.datepicker.css" rel="stylesheet" type="text/css" />
+<link href="css/jquery.fancybox-1.3.1.css" rel="stylesheet" type="text/css" />
+
+<link href="css/innerCommon.css" rel="stylesheet" type="text/css" />
+<link href="css/faq.css" rel="stylesheet" type="text/css" />
+<link href="css/inner_all_common.css" rel="stylesheet" type="text/css" />
+<link href="css/common_list_menu.css" rel="stylesheet" type="text/css" />
 <link href="css/CSSDEV.css" rel="stylesheet" type="text/css" />
-<link href="css/frog_m.css" rel="stylesheet" type="text/css" />
+
+{# <link href="css/frog_m.css" rel="stylesheet" type="text/css" /> #}
 
 </head>
 <!--以上為設計使用,不需要填入後台--> 
@@ -18,7 +31,107 @@
 
 
 <link href="/content/css/earlybird_preferent.css" rel="stylesheet" type="text" />
-<style type="text/css">.common_content_inner h3 { margin-bottom:8px; font-size:15px; color:#db5106;}
+<style type="text/css">
+
+.clear {
+  clear: both; }
+
+.clearfix:before, .clearfix:after {
+  content: "";
+  display: table; }
+
+.clearfix:after {
+  clear: both; }
+
+.clearfix {
+  zoom: 1; }
+
+.questionnaire {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 20px; }
+
+.questionnaire p {
+  padding: 0;
+  font-size: 14px; }
+
+.questionnaire h6 {
+  margin-bottom: 5px;
+  margin-top: 15px;
+  color: #222; }
+
+.questionnaire .check_item {
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 10px; }
+
+.questionnaire .check_item label {
+  font-size: 14px; }
+
+.questionnaire .input_item {
+  float: left;
+  margin-right: 20px;
+  width: 90%; }
+
+.questionnaire .input_item input[type=text] {
+  width: 90%;
+  margin-top: 10px;
+  padding: 10px;
+  font-size: 13px;
+  color: #222;
+  border: 1px solid #c0c0c0; }
+
+.questionnaire .input_item input::-webkit-input-placeholder {
+  color: #eee;
+  font-weight: 100; }
+
+.questionnaire .input_item input::-moz-placeholder {
+  color: #eee;
+  font-weight: 100; }
+
+.questionnaire .input_item input:-ms-input-placeholder {
+  color: #eee;
+  font-weight: 100; }
+
+.questionnaire .input_item input::placeholder {
+  color: #eee;
+  font-weight: 100; }
+
+.questionnaire .input_item textarea {
+  width: 90%;
+  border: 1px solid #c0c0c0; }
+
+.questionnaire table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin-bottom: 20px; }
+
+.questionnaire table tr td {
+  border: 1px solid #c0c0c0;
+  padding: 8px 15px;
+  font-size: 14px; }
+
+.faq_for_half {
+  width: 50%;
+  float: left; }
+
+.faq_form label {
+  width: 120px; }
+
+.submit_m {
+  display: block;
+  width: 100px;
+  margin: 0 auto;
+  padding: 5px 0;
+  text-align: center;
+  background-color: #888;
+  color: #FFF; }
+
+
+
+
+.common_content_inner h3 { margin-bottom:8px; font-size:15px; color:#db5106;}
 .tb_L { width:378px;}
 .tacle_set { padding-left:14px;}
 
