--- a/assets/sass/frog.sass
+++ b/assets/sass/frog.sass
@@ -60,7 +60,6 @@
 	width: 50%
 	float: left
 
-
 .faq_form label 
 	width: 120px
 
@@ -74,3 +73,29 @@
 	color: #FFF
 
 
+.table_desktop
+	table
+		border-collapse: collapse
+		border-spacing: 0
+		margin-bottom: 20px
+		width: 100%
+		tr
+			th 
+				border: 1px solid #c0c0c0
+				padding: 8px 15px
+				font-size: 14px
+				font-weight: bolder
+				text-align: left
+			td 
+				border: 1px solid #c0c0c0
+				padding: 8px 15px
+				font-size: 14px
+				text-align: left
+				p 
+					margin-bottom: 0
+
+
+.common_article
+	img
+		display: block
+		margin: 50px auto
