--- a/views/a02_精神與永續使命_m.twig
+++ b/views/a02_精神與永續使命_m.twig
@@ -1,7 +1,6 @@
 {# index.twig #}
-{% extends "/_template/layout.twig" %}
-{% block page %}
-
+{% extends "/_template/layout_m.twig" %}
+{% block page_m %}
 
 <article class="common_article">
 <h1 class="title_h2">關鍵指標與績效</h1>
@@ -59,4 +58,6 @@
 </ul>
 </article>
 
-{% endblock %} 
+
+
+{% endblock %}
