--- a/public/css/frog.css
+++ b/public/css/frog.css
@@ -79,3 +79,29 @@
   text-align: center;
   background-color: #888;
   color: #FFF; }
+
+.table_desktop table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin-bottom: 20px;
+  width: 100%; }
+
+.table_desktop table tr th {
+  border: 1px solid #c0c0c0;
+  padding: 8px 15px;
+  font-size: 14px;
+  font-weight: bolder;
+  text-align: left; }
+
+.table_desktop table tr td {
+  border: 1px solid #c0c0c0;
+  padding: 8px 15px;
+  font-size: 14px;
+  text-align: left; }
+
+.table_desktop table tr td p {
+  margin-bottom: 0; }
+
+.common_article img {
+  display: block;
+  margin: 50px auto; }
