--- a/assets/sass/frog.sass
+++ b/assets/sass/frog.sass
@@ -15,7 +15,6 @@
 	zoom: 1 /* ie 6/7 */
 
 
-
 .questionnaire
 	width: 100%
 	margin-top: 30px
@@ -93,6 +92,9 @@
 				text-align: left
 				p 
 					margin-bottom: 0
+				img 
+					margin: 10px !important
+
 
 
 .common_article
