--- a/views/_template/layout.twig
+++ b/views/_template/layout.twig
@@ -22,7 +22,7 @@
 <link href="css/inner_all_common.css" rel="stylesheet" type="text/css" />
 <link href="css/common_list_menu.css" rel="stylesheet" type="text/css" />
 
-{# <link href="css/frog.css" rel="stylesheet" type="text/css" /> #}
+<link href="css/frog.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -32,114 +32,6 @@
 <link href="/content/css/earlybird_preferent.css" rel="stylesheet" type="text" />
 
 <style type="text/css">
-.clear {
-  clear: both; }
-
-.clearfix:before, .clearfix:after {
-  content: "";
-  display: table; }
-
-.clearfix:after {
-  clear: both; }
-
-.clearfix {
-  zoom: 1; }
-
-.questionnaire {
-  width: 100%;
-  margin-top: 30px; }
-
-.questionnaire h6 {
-  margin-bottom: 5px;
-  margin-top: 15px;
-  color: #222; }
-
-.questionnaire .check_item {
-  float: left;
-  margin-right: 20px; }
-
-.questionnaire .input_item {
-  float: left;
-  margin-right: 20px; }
-
-.questionnaire .input_item input[type=text] {
-  margin-top: 10px;
-  padding: 10px;
-  font-size: 14px;
-  color: #222;
-  border: 1px solid #c0c0c0; }
-
-.questionnaire .input_item input::-webkit-input-placeholder {
-  color: #eee;
-  font-weight: 100; }
-
-.questionnaire .input_item input::-moz-placeholder {
-  color: #eee;
-  font-weight: 100; }
-
-.questionnaire .input_item input:-ms-input-placeholder {
-  color: #eee;
-  font-weight: 100; }
-
-.questionnaire .input_item input::placeholder {
-  color: #eee;
-  font-weight: 100; }
-
-.questionnaire .input_item textarea {
-  width: 450px; }
-
-.questionnaire table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  margin-bottom: 20px; }
-
-.questionnaire table tr td {
-  border: 1px solid #c0c0c0;
-  padding: 8px 15px;
-  font-size: 14px; }
-
-.faq_for_half {
-  width: 50%;
-  float: left; }
-
-.faq_form label {
-  width: 120px; }
-
-.submit_m {
-  display: block;
-  width: 120px;
-  margin: 0 auto;
-  padding: 5px 0;
-  text-align: center;
-  background-color: #888;
-  color: #FFF; }
-
-.table_desktop table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  margin-bottom: 20px;
-  width: 100%; }
-
-.table_desktop table tr th {
-  border: 1px solid #c0c0c0;
-  padding: 8px 15px;
-  font-size: 14px;
-  font-weight: bolder;
-  text-align: left; }
-
-.table_desktop table tr td {
-  border: 1px solid #c0c0c0;
-  padding: 8px 15px;
-  font-size: 14px;
-  text-align: left; }
-
-.table_desktop table tr td p {
-  margin-bottom: 0; }
-
-.common_article img {
-  display: block;
-  margin: 50px auto; }
-
 
   /*=======*/
 .common_content_inner h3 { margin-bottom:8px; font-size:15px; color:#db5106;}
