--- a/views/a06_利害關係人專區.twig
+++ b/views/a06_利害關係人專區.twig
@@ -15,7 +15,7 @@
 	<div class="table_desktop">
 	<table >
 		<tr >
-			<th>利害關係人</th>
+			<th style="width:20%">利害關係人</th>
 			<th style="width:20%">溝通管道 </th>
 			<th style="width:20%">2015年重點溝通績效</th>
 			<th style="width:20%">2016年重點溝通績效</th>
