--- a/assets/sass/frog_m.sass
+++ b/assets/sass/frog_m.sass
@@ -81,3 +81,24 @@
 	background-color: #888
 	color: #FFF
 
+.table_m
+	table
+		border-collapse: collapse
+		border-spacing: 0
+		margin-bottom: 20px
+		tr
+			th 
+				border: 1px solid #c0c0c0
+				padding: 5px
+				font-size: 14px
+				font-weight: bolder
+				text-align: left
+			td 
+				border: 1px solid #c0c0c0
+				padding: 5px
+				font-size: 14px
+				text-align: left
+				p 
+					margin-bottom: 0 !important
+				img 
+					margin: 10px !important
