--- a/public/css/frog_m.css
+++ b/public/css/frog_m.css
@@ -88,3 +88,27 @@
   text-align: center;
   background-color: #888;
   color: #FFF; }
+
+.table_m table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin-bottom: 20px; }
+
+.table_m table tr th {
+  border: 1px solid #c0c0c0;
+  padding: 5px;
+  font-size: 14px;
+  font-weight: bolder;
+  text-align: left; }
+
+.table_m table tr td {
+  border: 1px solid #c0c0c0;
+  padding: 5px;
+  font-size: 14px;
+  text-align: left; }
+
+.table_m table tr td p {
+  margin-bottom: 0 !important; }
+
+.table_m table tr td img {
+  margin: 10px !important; }
