new template and style

--- a/views/b02_客戶關係維護_m.twig
+++ b/views/b02_客戶關係維護_m.twig
@@ -4,174 +4,23 @@
 
 
 <article class="common_article">
-	<h1 class="title_h2">利害關係人專區</h1>
-	<!-- <h3>2015和2016年績效亮點</h3> -->
-	<div class="articleTitle">
-		<h2 class="articleTitleContent">利害關係人鑑別</h2>
-	</div>
-	<p>台灣高鐵的利害關係人廣泛多元，為呈現出具有代表性之利害關係人，我們參照AA1000 利害關係人參與標準（AA1000 Stakeholder Engagement Standard），依重要性篩選出八類重要利害關係人：旅客、社區居民、媒體、員工、股東/投資人、非政府組織（NGO）、供應商/承包商、政府/主管機關 台灣高鐵持續與不同利害關係人溝通合作，2015與2016年與主要8類利害關係人透過定期與不定期的多元溝通管道，激盪出不同的成效和產生多元化的社會價值。針對各利害關係人族群關注的議題，我們除透過下列管道溝通說明外，亦透過此報告書之對應章節進行溝通。</p>
+	
+	<h1 class="title_h2">客戶關係維護</h1>
+	<p>我們以提供乘客暖心服務為中心原則，設有專門負責顧客意見之部門以維繫顧客關係，並希冀利用顧客建議來提升服務品質。我們設立多元管道聆聽顧客意見，包括在客服中心裡除國台語應對外，也配置英語專才，好兼顧外籍顧客之需求。
+	</p>
+
+	<img src="images/b14.jpg" alt="" style="width: 90%; display: block; margin: 20px auto">
+	<p style="text-align: center; margin-top: 10px">現行意見蒐集管道及客服作業體系</p>
+
+	<img src="images/b15.jpg" alt="" style="width: 90%; display: block; margin: 20px auto">
+	<p style="text-align: center; margin-top: 10px">現行客訴問題解決機制</p>
+
+	<p>在顧客資料保護方面，內部系統僅保留敬老與愛心票之身分證字號、出生年月日等資料，其他身分之客戶資料皆不保存，且為保障顧客個人資料，除公告「顧客個人資料保護權益事項」外，也推動多項管理措施，包括「個人資料保護政策」、「個人資料檔案安全維護計畫」，做為個人資料處理作業之準據，確保各單位在日常作業執行過程中，於個人資料之蒐集、處理與利用符合相關法令要求，避免發生缺失情形。我們的「個人資料保護作業執行組」每年定期召開「個人資料保護作業管理會議」，檢討有關個人資料保護事宜。高鐵企業網站特別設有「個人資料保護專區」，公告以上相關文件供社會大眾檢視參考。</p>
+	
+	<img src="images/b16.jpg" alt="" style="width: 100%; display: block; margin: 20px auto">
 
 	
-	
-	<br>
-	<br>
-
-	<div class="articleTitle">
-		<h2 class="articleTitleContent">利害關係人問卷</h2>
-	</div>
-	<p>台灣高速鐵路股份有限公司（以下簡稱台灣高鐵）於2009年首度發布「台灣高鐵企業社會責任白皮書」，揭露我們在社會責任的績效與作為。為因應國際趨勢與符合國內非財務資訊揭露之規範，自2015年起，報告書正式更名為「台灣高鐵企業社會責任報告書」。透過每年定期發行企業社會責任報告書，期望透過報告書、公司網頁等管道，與所有關心本公司的朋友們持續溝通。
-
-	為使本公司執行的重大性議題相關政策能夠滿足利害關係人的需要，特別規劃執行「台灣高鐵企業永續議題問卷調查」，我們非常重視您的意見，懇請您撥冗填答，俾利我們未來針對重大性考量面，規劃未來企業社會責任議題之目標與進程。感謝您協助填寫下列問卷(填寫時間約10分鐘)，本問卷所得資訊僅作為分析利害關係人關注考量面使用，不作為其他用途，感謝您的支持與協助!</p>
-	<br>
-	<p style="text-align: right;">台灣高鐵 敬啟</p>
 </article>
-{# here here #}
-<div class="questionnaire">
-	<section class="common_content">
-		<section class="faq_form">
-			<div class="bg_grey out_div" style="padding: 10px">
-	            <fieldset>
-	                <div class="">
-	                    <h6>您的身份? (複選)  </h6>
-	                    <div class="clear"></div>	
-	                    <input type="checkbox" name="Sex" id="aa" value="1">            
-	                    <label style=" width: auto; margin-right: 20px" for="aa">旅客</label>
-
-	                    <input type="checkbox" name="Sex" id="aa1" value="0">
-	                    <label style=" width: auto; margin-right: 20px" for="aa1">社區居民</label>
-
-	                    <input type="checkbox" name="Sex" id="aa3" value="1">            
-	                   <label style=" width: auto; margin-right: 20px" for="aa3">媒體</label>
-
-	                    <input type="checkbox" name="Sex" id="aa4" value="0">
-	                    <label style=" width: auto; margin-right: 20px" for="aa4">員工</label>
-
-	                    <input type="checkbox" name="Sex" id="aa5" value="1">            
-	                   <label style=" width: auto; margin-right: 20px" for="aa5">股東/投資人</label>
-
-	                    <input type="checkbox" name="Sex" id="aa6" value="0">
-	                    <label style=" width: auto; margin-right: 20px" for="aa6">非政府組織（NGO）</label>
-
-	                    <input type="checkbox" name="Sex" id="aa7" value="1">            
-	              		<label style=" width: auto; margin-right: 20px" for="aa7">供應商/承包商</label>
-
-	                    <input type="checkbox" name="Sex" id="aa8" value="1">
-	                    <label style=" width: auto; margin-right: 20px" for="aa8">政府/主管機關</label>
-	                </div>
-	            </fieldset>
-	        </div>
- 			<div class="out_div" style="background: #f7f7f7; padding: 10px">
-				<fieldset>
-	                <div class="faq_for_half">
-	                    <label for="">姓名</label>
-	                    <input class="" id="" name="" type="text" value="">
-	             	</div>
-	    			<div class="faq_for_half">
-	                    <label for="">公司/機構名稱</label>
-	                    <input class="" id="" maxlength="23" name="" type="text" value="">
-	                </div>
-	            </fieldset>
-            </div>
-
-            <div class="bg_grey out_div" style="background: #f7f7f7; padding: 10px">
-				<fieldset>
-					<h6>請問您是否曾經閱讀過台灣高鐵的企業社會責任報告書? </h6>
-	                <input type="radio" name="" id="Radio" value="1">            
-	                <label style=" width: auto; margin-right: 20px" for="Radio">是</label>
-
-	                <input type="radio" name="" id="Radio1" value="0">
-	               	<label style=" width: auto; margin-right: 20px" for="Radio1">否</label>
-	            </fieldset>
-            </div>
- 			<div class="out_div" style="background: #f7f7f7; padding: 10px">
-				<h6>下表為台灣高鐵企業社會責任報告書2015~2016年中所辨識出的重大性議題，供您參考以回答接下來的問卷題目。 </h6>
-				<table>
-				 	<tr>
-				 		<td>1.運輸安全管理</td>
-				 		<td>2.產品/服務品質</td>
-				 		<td>3.人文關懷與在地發展</td>
-				 		<td>4.供應商管理</td>
-				 	</tr>
-				 	<tr>
-				 		<td>5.營運策略</td>
-				 		<td>6.公司治理</td>
-				 		<td>7.疏運與轉運服務</td>
-				 		<td>8.職業安全衛生</td>
-				 	</tr>
-				 	<tr>
-				 		<td>9.員工培育與發展</td>
-				 		<td>10.招募與留任</td>
-				 		<td>11.企業形象</td>
-				 		<td>12.社會對話</td>
-				 	</tr>
-				 	<tr>
-				 		<td>13.災害預防與重大事件對策</td>
-				 		<td>14.法規遵循</td>
-				 		<td>15.氣候變遷減緩策略</td>
-				 		<td>16.降低噪音與震動</td>
-				 	</tr>		 	
-				 	<tr>
-				 		<td>17.氣候變遷調適策略</td>
-				 		<td>18.產品價格</td>
-				 		<td>19.創新服務</td>
-				 		<td>20.生態衝擊管理</td>
-
-				 	</tr>
-				 	<tr>
-				 		<td>21.營運績效</td>
-				 		<td>22.勞動權益保障</td>
-				 		<td>23.能資源使用效率</td>
-				 		<td></td>
-				 	</tr>
-				 </table> 
-				
-			<p>您依據重大性議題清單回覆以下五個問題，請依據代碼回覆:</p>
-			<p style="margin-bottom: 5px">您自己最關心的三項議題:	</p>
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<div class="clear" style="height: 25px"></div>			
-
-			
-			<p style="margin-bottom: 5px">您自己最不關心的三項議題::	</p>
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<div class="clear" style="height: 25px"></div>	
-			
-			<p style="margin-bottom: 5px">您認為台灣高鐵最關心的三項議題:	</p>
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<div class="clear" style="height: 25px"></div>	
-
-			<p style="margin-bottom: 5px">您認為台灣高鐵最不關心的三項議題:	</p>
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<div class="clear" style="height: 25px"></div>	
-
-			<p style="margin-bottom: 5px">您認為台灣高鐵最該公開揭露資訊的三項議題:	</p>
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<div class="clear" style="height: 25px"></div>	
-
-			<p style="margin-bottom: 5px">您認為台灣高鐵最該公開揭露資訊的三項議題:	</p>
-			<div class="input_item">
-			<textarea name="" id="" cols="30" rows="10"></textarea>
-			</div>
-			<div class="clear" style="height: 10px"></div>	
-
-			<a href="#" class="submit_m">送出</a>
-				
-          </div>
-		</section>
-
-	</section>
-</div>
-{# here here #}
-
 
 
 {% endblock %} 
