--- a/views/c03_能源與廢棄物管理_m.twig
+++ b/views/c03_能源與廢棄物管理_m.twig
@@ -2,175 +2,156 @@
 {% extends "/_template/layout_m.twig" %}
 {% block page_m %}
 
-
 <article class="common_article">
-	<h1 class="title_h2">利害關係人專區</h1>
-	<!-- <h3>2015和2016年績效亮點</h3> -->
-	<div class="articleTitle">
-		<h2 class="articleTitleContent">利害關係人鑑別</h2>
-	</div>
-	<p>台灣高鐵的利害關係人廣泛多元，為呈現出具有代表性之利害關係人，我們參照AA1000 利害關係人參與標準（AA1000 Stakeholder Engagement Standard），依重要性篩選出八類重要利害關係人：旅客、社區居民、媒體、員工、股東/投資人、非政府組織（NGO）、供應商/承包商、政府/主管機關 台灣高鐵持續與不同利害關係人溝通合作，2015與2016年與主要8類利害關係人透過定期與不定期的多元溝通管道，激盪出不同的成效和產生多元化的社會價值。針對各利害關係人族群關注的議題，我們除透過下列管道溝通說明外，亦透過此報告書之對應章節進行溝通。</p>
+	<h1 class="title_h2">能源與廢棄物管理</h1>
+	
 
+	<p>自2013年配合政府再生能源政策，與電業公司合作利用烏日基地、燕巢總機廠及左營基地廠區內之廠房屋頂（面積約30,088平方公尺），設置總發電容量約為5,359瓩之太陽能發電設備，2016年全年發電量達6,890,781度；2015年12月於苗栗、彰化及雲林車站站體外圍屋面及遮陽雨庇架設太陽能板，以輔助發電供車站使用，其太陽光電設置容量共計258 瓩，2016年全年發電量達213,767度。我們成立「節能專案小組」負責推動高鐵各車站及基地之節能措施，並定期每3個月召開「節能會議」，追蹤辦理情形，檢討每季能源（用電）使用情形，宣導節能減碳觀念。</p>
 	
-	
-	<br>
-	<br>
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">維修基地節能與能源管理措施</h2>
+	</div>
+	<p>「節能專案小組」於維修基地持續推動「節能自主管理、減少用電量、轉移尖峰用電及合理用電」等四大節能方案，更採行「兩段式時間電價變更為三段式時間電價」、「裝設小型冰水主機之獨立空調系統」、「更改污水處理廠鼓風機操作模式」、「夏月抑低原契約用電容量」、「LED照明改善」、「調高冰機出水溫度」等措施。</p>
 
 	<div class="articleTitle">
-		<h2 class="articleTitleContent">利害關係人問卷</h2>
+		<h2 class="articleTitleContent">綠色車站</h2>
 	</div>
-	<p>台灣高速鐵路股份有限公司（以下簡稱台灣高鐵）於2009年首度發布「台灣高鐵企業社會責任白皮書」，揭露我們在社會責任的績效與作為。為因應國際趨勢與符合國內非財務資訊揭露之規範，自2015年起，報告書正式更名為「台灣高鐵企業社會責任報告書」。透過每年定期發行企業社會責任報告書，期望透過報告書、公司網頁等管道，與所有關心本公司的朋友們持續溝通。
+	<p>車站主體皆配合現地環境利用大量玻璃帷幕、挑簷、流動屋頂及百葉等設計單元，以減少建築材料及空調負荷。在各車站管控照明、空調，採行「照明迴路修改」、「兩段式時間電價變更為三段式時間電價」、「調整契約用電容量」等多項節能與能源管理措施，2015年起車站執行「空調溫度設定26℃」、「依列車時刻表調整電扶梯啟動及停機時間」、「電扶梯加裝變頻器」及「關閉屋頂投射燈」等節能改善措施。</p>
 
-	為使本公司執行的重大性議題相關政策能夠滿足利害關係人的需要，特別規劃執行「台灣高鐵企業永續議題問卷調查」，我們非常重視您的意見，懇請您撥冗填答，俾利我們未來針對重大性考量面，規劃未來企業社會責任議題之目標與進程。感謝您協助填寫下列問卷(填寫時間約10分鐘)，本問卷所得資訊僅作為分析利害關係人關注考量面使用，不作為其他用途，感謝您的支持與協助!</p>
-	<br>
-	<p style="text-align: right;">台灣高鐵 敬啟</p>
+	<p>2016年新增推動執行中之各項能源管理措施如下：<br>
+	辦理台南車站、左營車站停車場建置太陽能板初步規劃。<br>
+	持續汰換高耗能照明燈具為LED。<br>
+	依列車時刻表調整電扶梯啟動及停機時間；並於向上的電扶梯加裝變頻器。<br>
+	車站大廳層光線足夠則可利用自然採光方式，照明改以Photo Cell控制開啟。<br>
+	</p>
+
+	<p>台灣高鐵為積極落實綠建築，建築物皆朝向「生態、節能、減廢、健康」等永續環境設計理念，遵循「建築技術規則」中有關「綠建築專章」原則設計，並選用在地產業以減少工程施工期間之「碳足跡」。新建之高鐵苗栗站、彰化站及雲林站皆設置太陽能發電設施，三站皆於2016年榮獲內政部核綠建築標章證書及獲頒綠建築標章銘牌</p>
+
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">列車減碳效益</h2>
+	</div>
+	<p>台灣高鐵致力推動「列車燈管更換 LED 計畫」，2013年11月開始換裝燈管，全車隊於2016年1月完成。2013年11月至2016年12月底，累計節電334.5萬度及減少1,763公噸二氧化碳排放量。我們亦成立「列車節能小組」，推動「列車駕駛節能運轉」，降低列車營運過程之能耗及排放。列車駕駛節能運轉係指基於安全之原則，適當運用列車之牽引力與煞車，配合地形，以合理之能源消耗模式，兼顧降低設備磨耗之運轉方式。</p>
+
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">減少旅客碳足跡</h2>
+	</div>
+	<p>台灣高鐵於2014年11月成為國內首家取得「運輸服務碳足跡標籤」之交通運具，並在企業網站「企業社會責任專區」下建置「高速鐵路運輸服務碳足跡」專頁、在車上刊物T-Life及高鐵車票揭露碳標籤。台灣高鐵委託第三公證單位查驗，認證碳足跡為每人每公里運輸服務產生相當於38公克二氧化碳的溫室氣體排放量，約為小客車的1/2；若以高鐵2015年全年度載運之旅客里程數計算，較搭乘小客車大幅減少386,198公噸的二氧化碳量，相當於1,302 座大安森林公園的植樹面積；2016年較搭乘小客車減少419,534公噸的二氧化碳量，相當於1,414座大安森林公園的植樹面積。另配合苗栗、彰化、雲林及南港站開始營運，將於2017年12月16日碳標籤有效期限前，辦理盤查並查證高鐵運輸服務碳足跡，並向行政院環境保護署申請碳標籤效期展延3年。
+	</p>
+
+	<div style="overflow: auto" class="table_m">  
+		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px; " width="500">
+			<tr >
+				<th>
+					<img src="images/b17.jpg" alt="" style=" display: block; margin: 0 auto">
+					<p style="text-align: center; margin-top: 10px">碳足跡標籤</p>
+				</th>
+				<th>
+					<img src="images/b18.jpg" alt="" style=" display: block; margin: 0 auto">
+					<p style="text-align: center; margin-top: 10px">碳足跡標籤證書授證典禮</p>
+				</th>
+			</tr>
+					
+			
+		</table>
+	</div>
+
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">水資源和廢棄物管理</h2>
+	</div>
+	<p>在水資源保護上，我們以節約用水、減量及回收再利用為用水管理政策。透過「節能專案小組」並定期（每季）召開場站節水成效檢討會議，並訂定隨列車旅次成長平均服務每名旅客用水量為節水指標。台灣高鐵車站、基地（含燕巢總機廠）及總公司之用水來源，皆為自來水，並無使用地下水。</p>
+
+	<div style="overflow: auto" class="table_m">  
+		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px; ">
+			<tr >
+				<td bgcolor="#db5106" style="color: #FFF; width:30%">
+					<p>碳足跡標籤</p>
+				</td>
+				<td bgcolor="#db5106" style="color: #FFF; width:30%">
+					<p>碳足跡標籤證書授證典禮</p>
+				</td>
+			</tr>			
+			<tr >
+				<td>
+					<p>建立自來水用水登錄及用量檢核機制</p>
+					<p>每日控管用水並由機電設施維護人員進行用水設施巡查</p>
+					<p>每月檢測放流水質以符合放流水標準並定期申報，確保處理後水質可回收於噴灌使用</p>
+				</td>
+				<td>
+					<p>廁所換裝感應式節水設備</p>
+					<p>收集雨水，儲存於滯洪池後再利用於廠區植栽澆灌使用</p>
+					<p>提高污水處理廠放流水回收利用於植栽噴灌用量</p>
+					<p>中央空調冰水系統並聯運轉減少冷卻水塔水量蒸發及飛散損失量</p>
+					<p>改善左營及烏日基地列車洗車機</p>
+					<p>縮減噴灌設備操作次數及噴水動作時間</p>
+					<p>改善列車維修流程以減少維修用水量</p>
+					<p>宣導惜水，加強員工節水教育</p>
+				</td>
+			</tr>
+					
+			
+		</table>
+	</div>
+	
+	<h3>而節水措施的效益如下：</h3>
+		<div style="overflow: auto" class="table_m">  
+		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;" width="500">
+			<tr >
+				<td bgcolor="#db5106" style="color: #FFF; width:30%">
+					<p>基地之節水效益</p>
+				</td >
+				<td bgcolor="#db5106" style="color: #FFF; width:30%">
+					<p>車站之節水效益</p>
+				</td>
+				<td bgcolor="#db5106" style="color: #FFF; width:40%">
+					<p>全公司之節水效益</p>
+				</td>
+			</tr>
+			<tr >
+				<td>
+					<p>基地平均服務每名旅客用水度數由2009年0.0056度逐年降低至2016年0.0029度，平均每年節水率達10%。</p>
+				</td >
+				<td>
+					<p>平均服務每名旅客用水費由2009年之0.024度降低至2016年0.014度，平均每年節水率達8%。</p>
+				</td>
+				<td>
+					<p>由最高之0.0215度，減至2016年之0.0181度，總節水率已達10%。</p>
+				</td>
+			</tr>			
+		</table>
+	</div>
+	<p>我們於維修基地針對員工生活垃圾及列車維修產出廢棄物，與車站員工及旅客生活垃圾，推動廢棄物回收，回收廢棄物品項含紙類、寶特瓶、廢鋁、廢鐵、廢塑膠、廢木材、燈管、光碟片、鉛蓄電池、廢潤滑油等，統計2016年廢棄物處理總量達8,228噸，其中委託合格清除業者清運至焚化爐處理之廢棄物量7,293噸，資源廢棄物回收率約11%，回收量達935公噸，皆透過再利用廠商清運處理。</p>
+	<p>2015和2016年車站及基地廢污水處理及廢棄物處理操作與維護花費分別為50,410仟元和63,816仟元。重點項目包括污水處理廠設備維修更新、混凝沉澱消毒藥劑、水質檢測、污泥清運處理及廢棄務委外清運等作業內容。</p>
+			
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">營運管理</h2>
+	</div>
+	<p>台灣高鐵除積極執行行車運輸的低碳措施，也從營運面做起，在各辦公大樓推動節能環保措施，支持環境永續不遺餘力。</p>
+	
+	<div style="overflow: auto" class="table_m">  
+		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px;" width="500">
+			<tr >
+				<td bgcolor="#db5106" style="color: #FFF; width:50%">
+					<p>「公文管理系統」線上簽核</p>
+				</td >
+				<td bgcolor="#db5106" style="color: #FFF; width:50%">
+					<p>高鐵總公司實施空調、照明和電力系統的節約能源措施</p>
+				</td>
+				
+			</tr>
+			<tr >
+				<td>
+					<p>電子公文交換，電子簽核比例高達99%以上，2015電子公文58,895份，節約紙張706,740張、保育樹木85棵及減碳1,020公斤。2016年電子化公文數量約43,807件，節約紙張525,684張、保育樹木63棵及減碳756公斤。2012至2016年節省紙張292萬餘張，換算貢獻減碳量約4,212公斤，節省造紙用水量42,120公升。</p>
+				</td >
+				<td>
+					<p>自2010年起陸續採行安裝玻璃門減少冷氣外洩、強化空調效能、廣採節能措施等節能減碳方案，2015年起更由專人控管室內冷氣溫度不低於26度。相較2009年，每年平均節電率達18%以上，至2015年已合計節省約97.7萬度電力，相當於減少排放約518公噸CO2。至2016年已合計節省約109.8萬度電力，相當於減少排放約582公噸CO2。</p>
+				</td>
+				
+			</tr>			
+		</table>
+	</div>
+
 </article>
-{# here here #}
-<div class="questionnaire">
-	<section class="common_content">
-		<section class="faq_form">
-			<div class="bg_grey out_div" style="padding: 10px">
-	            <fieldset>
-	                <div class="">
-	                    <h6>您的身份? (複選)  </h6>
-	                    <div class="clear"></div>	
-	                    <input type="checkbox" name="Sex" id="aa" value="1">            
-	                    <label style=" width: auto; margin-right: 20px" for="aa">旅客</label>
 
-	                    <input type="checkbox" name="Sex" id="aa1" value="0">
-	                    <label style=" width: auto; margin-right: 20px" for="aa1">社區居民</label>
-
-	                    <input type="checkbox" name="Sex" id="aa3" value="1">            
-	                   <label style=" width: auto; margin-right: 20px" for="aa3">媒體</label>
-
-	                    <input type="checkbox" name="Sex" id="aa4" value="0">
-	                    <label style=" width: auto; margin-right: 20px" for="aa4">員工</label>
-
-	                    <input type="checkbox" name="Sex" id="aa5" value="1">            
-	                   <label style=" width: auto; margin-right: 20px" for="aa5">股東/投資人</label>
-
-	                    <input type="checkbox" name="Sex" id="aa6" value="0">
-	                    <label style=" width: auto; margin-right: 20px" for="aa6">非政府組織（NGO）</label>
-
-	                    <input type="checkbox" name="Sex" id="aa7" value="1">            
-	              		<label style=" width: auto; margin-right: 20px" for="aa7">供應商/承包商</label>
-
-	                    <input type="checkbox" name="Sex" id="aa8" value="1">
-	                    <label style=" width: auto; margin-right: 20px" for="aa8">政府/主管機關</label>
-	                </div>
-	            </fieldset>
-	        </div>
- 			<div class="out_div" style="background: #f7f7f7; padding: 10px">
-				<fieldset>
-	                <div class="faq_for_half">
-	                    <label for="">姓名</label>
-	                    <input class="" id="" name="" type="text" value="">
-	             	</div>
-	    			<div class="faq_for_half">
-	                    <label for="">公司/機構名稱</label>
-	                    <input class="" id="" maxlength="23" name="" type="text" value="">
-	                </div>
-	            </fieldset>
-            </div>
-
-            <div class="bg_grey out_div" style="background: #f7f7f7; padding: 10px">
-				<fieldset>
-					<h6>請問您是否曾經閱讀過台灣高鐵的企業社會責任報告書? </h6>
-	                <input type="radio" name="" id="Radio" value="1">            
-	                <label style=" width: auto; margin-right: 20px" for="Radio">是</label>
-
-	                <input type="radio" name="" id="Radio1" value="0">
-	               	<label style=" width: auto; margin-right: 20px" for="Radio1">否</label>
-	            </fieldset>
-            </div>
- 			<div class="out_div" style="background: #f7f7f7; padding: 10px">
-				<h6>下表為台灣高鐵企業社會責任報告書2015~2016年中所辨識出的重大性議題，供您參考以回答接下來的問卷題目。 </h6>
-				<table>
-				 	<tr>
-				 		<td>1.運輸安全管理</td>
-				 		<td>2.產品/服務品質</td>
-				 		<td>3.人文關懷與在地發展</td>
-				 		<td>4.供應商管理</td>
-				 	</tr>
-				 	<tr>
-				 		<td>5.營運策略</td>
-				 		<td>6.公司治理</td>
-				 		<td>7.疏運與轉運服務</td>
-				 		<td>8.職業安全衛生</td>
-				 	</tr>
-				 	<tr>
-				 		<td>9.員工培育與發展</td>
-				 		<td>10.招募與留任</td>
-				 		<td>11.企業形象</td>
-				 		<td>12.社會對話</td>
-				 	</tr>
-				 	<tr>
-				 		<td>13.災害預防與重大事件對策</td>
-				 		<td>14.法規遵循</td>
-				 		<td>15.氣候變遷減緩策略</td>
-				 		<td>16.降低噪音與震動</td>
-				 	</tr>		 	
-				 	<tr>
-				 		<td>17.氣候變遷調適策略</td>
-				 		<td>18.產品價格</td>
-				 		<td>19.創新服務</td>
-				 		<td>20.生態衝擊管理</td>
-
-				 	</tr>
-				 	<tr>
-				 		<td>21.營運績效</td>
-				 		<td>22.勞動權益保障</td>
-				 		<td>23.能資源使用效率</td>
-				 		<td></td>
-				 	</tr>
-				 </table> 
-				
-			<p>您依據重大性議題清單回覆以下五個問題，請依據代碼回覆:</p>
-			<p style="margin-bottom: 5px">您自己最關心的三項議題:	</p>
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<div class="clear" style="height: 25px"></div>			
-
-			
-			<p style="margin-bottom: 5px">您自己最不關心的三項議題::	</p>
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<div class="clear" style="height: 25px"></div>	
-			
-			<p style="margin-bottom: 5px">您認為台灣高鐵最關心的三項議題:	</p>
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<div class="clear" style="height: 25px"></div>	
-
-			<p style="margin-bottom: 5px">您認為台灣高鐵最不關心的三項議題:	</p>
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<div class="clear" style="height: 25px"></div>	
-
-			<p style="margin-bottom: 5px">您認為台灣高鐵最該公開揭露資訊的三項議題:	</p>
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<div class="clear" style="height: 25px"></div>	
-
-			<p style="margin-bottom: 5px">您認為台灣高鐵最該公開揭露資訊的三項議題:	</p>
-			<div class="input_item">
-			<textarea name="" id="" cols="30" rows="10"></textarea>
-			</div>
-			<div class="clear" style="height: 10px"></div>	
-
-			<a href="#" class="submit_m">送出</a>
-				
-          </div>
-		</section>
-
-	</section>
-</div>
-{# here here #}
 
 
 
