--- a/views/a06_利害關係人專區_m.twig
+++ b/views/a06_利害關係人專區_m.twig
@@ -283,22 +283,7 @@
 <div class="questionnaire">
 <section class="common_content">
 <section class="faq_form">
-<div class="bg_grey out_div" style="background: #f7f7f7; padding: 10px">
-<fieldset>
-<div>
-<h4>您的身份? (複選)</h4>
 
-<input id="aa" name="Sex" type="checkbox" value="1" /> <label for="aa" style=" width: auto">旅客</label> 
-<input id="aa1" name="Sex" type="checkbox" value="0" /> <label for="aa1" style=" width: auto">社區居民</label> 
-<input id="aa3" name="Sex" type="checkbox" value="1" /> <label for="aa3" style=" width: auto">媒體</label> 
-<input id="aa4" name="Sex" type="checkbox" value="0" /> <label for="aa4" style=" width: auto">員工</label> 
-<input id="aa5" name="Sex" type="checkbox" value="1" /> <label for="aa5" style=" width: auto">股東/投資人</label> 
-<input id="aa6" name="Sex" type="checkbox" value="0" /> <label for="aa6" style=" width: auto">非政府組織（NGO）</label> 
-<input id="aa7" name="Sex" type="checkbox" value="1" /> <label for="aa7" style=" width: auto">供應商/承包商</label> 
-<input id="aa8" name="Sex" type="checkbox" value="1" /> <label for="aa8" style=" width: auto">政府/主管機關</label>
-</div>
-</fieldset>
-</div>
 
 <div class="out_div" style="background: #f7f7f7; padding: 10px">
 <fieldset>
@@ -320,48 +305,9 @@
 <div class="out_div" style="background: #f7f7f7; padding: 10px">
 <h4>下表為台灣高鐵企業社會責任報告書2015~2016年中所辨識出的重大性議題，供您參考以回答接下來的問卷題目。</h4>
 
-<table>
-	<tbody>
-		<tr>
-			<td>1.運輸安全管理</td>
-			<td>2.產品/服務品質</td>
-			<td>3.人文關懷與在地發展</td>
-			<td>4.供應商管理</td>
-		</tr>
-		<tr>
-			<td>5.營運策略</td>
-			<td>6.公司治理</td>
-			<td>7.疏運與轉運服務</td>
-			<td>8.職業安全衛生</td>
-		</tr>
-		<tr>
-			<td>9.員工培育與發展</td>
-			<td>10.招募與留任</td>
-			<td>11.企業形象</td>
-			<td>12.社會對話</td>
-		</tr>
-		<tr>
-			<td>13.災害預防與重大事件對策</td>
-			<td>14.法規遵循</td>
-			<td>15.氣候變遷減緩策略</td>
-			<td>16.降低噪音與震動</td>
-		</tr>
-		<tr>
-			<td>17.氣候變遷調適策略</td>
-			<td>18.產品價格</td>
-			<td>19.創新服務</td>
-			<td>20.生態衝擊管理</td>
-		</tr>
-		<tr>
-			<td>21.營運績效</td>
-			<td>22.勞動權益保障</td>
-			<td>23.能資源使用效率</td>
-			<td>&nbsp;</td>
-		</tr>
-	</tbody>
-</table>
 
-<h4>您依據重大性議題清單回覆以下五個問題，請依據代碼回覆:</h4>
+
+<H4>您依據重大性議題清單回覆以下五個問題，請依據代碼回覆:</h4>
 
 <p style="margin-bottom: 5px">您自己最關心的三項議題:</p>
 <input id="" maxlength="23" name="" style="margin-right: 10px; margin-bottom: 5px" type="text" value="" /> <input id="" maxlength="23" name="" style="margin-right: 10px; margin-bottom: 5px" type="text" value="" /> <input id="" maxlength="23" name="" style="margin-right: 10px; margin-bottom: 5px" type="text" value="" />
@@ -394,10 +340,5 @@
  </div>
 </section>
 </div>
-
-</div>
-{# here here #}
-
-
 
 {% endblock %} 
