--- a/views/b01_營運據點與服務_m.twig
+++ b/views/b01_營運據點與服務_m.twig
@@ -2,175 +2,207 @@
 {% extends "/_template/layout_m.twig" %}
 {% block page_m %}
 
-
 <article class="common_article">
-	<h1 class="title_h2">利害關係人專區</h1>
-	<!-- <h3>2015和2016年績效亮點</h3> -->
-	<div class="articleTitle">
-		<h2 class="articleTitleContent">利害關係人鑑別</h2>
-	</div>
-	<p>台灣高鐵的利害關係人廣泛多元，為呈現出具有代表性之利害關係人，我們參照AA1000 利害關係人參與標準（AA1000 Stakeholder Engagement Standard），依重要性篩選出八類重要利害關係人：旅客、社區居民、媒體、員工、股東/投資人、非政府組織（NGO）、供應商/承包商、政府/主管機關 台灣高鐵持續與不同利害關係人溝通合作，2015與2016年與主要8類利害關係人透過定期與不定期的多元溝通管道，激盪出不同的成效和產生多元化的社會價值。針對各利害關係人族群關注的議題，我們除透過下列管道溝通說明外，亦透過此報告書之對應章節進行溝通。</p>
+	<h1 class="title_h2">營運據點與服務</h1>
 
+	<p>台灣高鐵自2007年開始營運，總部設在南港，並有台北、板橋、桃園、新竹、台中、嘉義、台南及左營等8個車站。2015年12月1日起，新增苗栗、彰化、雲林等三站，並在2016年7月1日起新增南港站，至2016年底共計12個車站提供台灣西部主要城市運輸服務。</p>
+	<p>營運路線全長：350公里，沿線經過縣市：11縣市、76個鄉鎮市區</p>
+	<p>現有車站數：12 南港、台北、板橋、桃園、新竹、苗栗、台中、彰化、雲林、嘉義、台南、左營</p>
+	<p>現有基地數：5基地與車站功能不同，可細分為總機廠、調車場、工、電務基地以及維修基地。現有新竹六家基地、台中烏日基地、嘉義太保基地、高雄左營基地及高雄燕巢總機廠，另汐止基地待規劃中。</p>
+
+	<img src="images/b01.jpg" alt="" style="width: 80%; display: block; margin: 0 auto">
+
+
+	<p>台灣高鐵除提供快捷、便利舒適的鐵路運輸服務外，亦有零售事業和商業空間租賃等附屬事業，藉此創造附加價值，並提升附屬事業收入。我們期許能成為台灣優質便利生活的代言品牌，並兼顧社會責任，為顧客滿意而努力。</p>
+
+	<h3>台灣高鐵之服務項目</h3>
+	<div style="overflow: auto" class="table_m">
+		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px; " width="600">
+		<tr align="center" bgcolor="#ff6600" style="color: rgb(255, 255, 255);" valign="middle">
+			<tr >
+				<td bgcolor="#db5106" style="color: #FFF; width:20%;">項目</th>
+				<td bgcolor="#db5106" style="color: #FFF; width:80%">內容</th>
+			</tr>
+			<tr >
+				<td >鐵路運輸</td>
+				<td >快捷、便利又舒適的鐵路運輸服務，並有直達、半直達及站站停之列車停站模式符合民眾需求</td>
+			</tr>
+			<tr>
+				<td >販售</td>
+				<td >零售事業與推車販售等</td>
+			</tr>
+			<tr>
+				<td >租金等其他</td>
+				<td >商業空間租賃（如便利商店、餐飲、服務櫃檯等）、車站附設停車場、媒體銷售（如燈箱、柱面、牆面、商品展覽、彩繪列車等）</td>
+			</tr>
 	
+		</table>
+	</div>
+	<p>我們的上游廠商主要為提供鐵路車輛、土木營建、軌道相關服務設施設備之製造與維護行業；中游為電力供應業、列車整備相關之運輸輔助業，以及提供轉乘服務之相關業者，如停車場經營管理業、公路客運業、小客車租賃業及計程車客運業等；下游為搭乘台灣高鐵的旅客或是與我們聯合推出高鐵假期的旅行社業者等。
+	</p>
+<br>
+
+	<img src="images/b02.jpg" alt="" style="width: 90%; display: block; margin: 20px auto">
+	<p style="text-align: center; margin-top: -50px">2015年全年各通路所佔百分比</p>
+<br>
+
+	<img src="images/b03.jpg" alt="" style="width: 90%; display: block; margin: 20px auto">
+	<p style="text-align: center; margin-top: -50px">2016年全年各通路所佔百分比</p>
+<br>
+
+	<p>台灣高鐵持續致力於拓展多元的售票管道，為提升服務質感而努力，除確保傳統購票通路運作順暢，亦響應行動支付，研擬更便利的票務服務。如台灣高鐵APP「T-EX 行動購票」上線至今已近5 年，亦不斷更新功能以提升使用便利性。我們亦持續精進車站售票作業流程及規劃，好縮短旅客等候時間。如為縮短台北車站排隊等候時間，我們於2016年開始分階段導入因應作為。</p>
+
+	<h3>台北車站排隊等候時間縮短措施</h3>
+
+	<div style="overflow: auto" class="table_m">
+		<table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px; " width="800">
+		<tr align="center" bgcolor="#ff6600" style="color: rgb(255, 255, 255);" valign="middle">
+				<tr >
+					<td bgcolor="#db5106" style="color: #FFF; width:20%">階段</th>
+					<td bgcolor="#db5106" style="color: #FFF; 50%">規劃措施</th>
+					<td bgcolor="#db5106" style="color: #FFF; 30%">執行狀況和績效</th>
+				</tr>
+				<tr >
+					<td>第一階段（2016年4月）</td>
+					<td>
+						<p>於排隊區增加「行動服務人員」，協助排隊旅客填寫「購票行程資訊單」，於購票時出示，縮短櫃檯溝通時間</p>
+						<p>調整櫃位配置並增設快速購票櫃台</p>
+						<p>行動服務人員協助排隊旅客填寫購票行程資訊單</p>
+						<img src="images/b04.jpg" alt="">
+					</td>
+					<td>
+						<p>2016年4月25日起調整櫃位配置，旅客平均排隊等候時間均可於 10~12分鐘之內抵窗口開始購票</p>
+						<p>2016年4月18日配置「行動服務人員」，其平均排隊等候時間已從30分鐘縮短至19分鐘</p>
+					</td>
+				</tr>
+				<tr>
+					<td>第二階段（2016年5~12月）</td>
+					<td>
+						<p>於臺北捷運付費區增設10 台自動售票機（TVM），使捷運轉搭高鐵的旅客，出捷運站前即可購取高鐵車票，出站後可直接進高鐵閘門乘車</p>
+						<p>增加3個售票櫃台</p>
+						<p>
+							<img src="images/b05.jpg" alt="">
+						</p>
+					</td>
+					<td>
+						<p>2016年10月1日增設啟用10台TVM</p>
+						<p>2016年12月26日完工啟用3個新售票櫃台</p>
+					</td>
+				</tr>
+				<tr>
+					<td>第三階段（2017年~）</td>
+					<td>
+						<p>建置車站「行動服務人員」平板App系統，將人工作業模式轉由平板電腦 App 執行，並增加訂位功能</p>
+						<p>外場人員可透過平板 App 完成訂位，列印「高鐵臨時取票代碼單」，旅客於窗口時出示、付款及取票，旅客亦可逕至 TVM 付款取票</p>
+						<img src="images/b06.jpg" alt="" style="width: 90%; display: block; margin: 20px auto">
+						<img src="images/b07.jpg" alt="" style="width: 90%; display: block; margin: 20px auto">
+					</td>
+					<td>
+						<p>2016年4月25日起調整櫃位配置，旅客平均排隊等候時間均可於 10~12分鐘之內抵窗口開始購票</p>
+						<p>2016年4月18日配置「行動服務人員」，其平均排隊等候時間已從30分鐘縮短至19分鐘</p>
+					</td>
+				</tr>
+				
+			</table>
+		</div>
 	
-	<br>
-	<br>
+		<div class="articleTitle">
+			<h2 class="articleTitleContent">票種類型及優惠</h2>
+		</div>
+		<p>台灣高鐵除積極升級票務服務的便利性，也推動不同優惠票種服務旅客。除常態性的敬老、愛心、孩童等優待票和自由座及團體票的優惠外，台灣高鐵亦考量市場需求推出優惠產品：包括「早鳥優惠」、「信用卡商務車廂限量升等」、「信用卡標準車廂票價折扣」、「活動套票」、「大專院校學生優惠專案」、「平日離峰96 折」、「指定車次25 人以上團體優惠」、「校外教學」、「回數票」、「定期票」及「企業會員」等產品及優惠活動，期能提升民眾搭乘意願，同時積極開拓客源，創造公司最大營收。所有票種及優惠產品的內容說明、票價優惠、售票通路、變更及取消規定等注意事項均在高鐵企業網站上有詳細說明。</p>
+		<p>此外，因應島內觀光風氣盛行，活化在地旅遊，台灣高鐵策劃高鐵假期、旅行社自組商品、自由行（飯店聯票/ 航空聯票/ 陸運聯票/ 活動套票）、以及機關團體活動（校外教學/ 團體旅遊）等產品。旅客服務</p>
+
+
+		<div class="articleTitle">
+			<h2 class="articleTitleContent">強化資訊傳遞</h2>
+		</div>
+		<p>位於車站大廳與候車區的旅客資訊顯示電子看板提供營運訊息、注意事項及高鐵服務宣傳影片，在各車站提供重要營運訊息。2015 年苗栗、彰化和雲林站啟用時裝設新式的顯示系統，而其他車站正規劃分階段更新。我們亦經營Facebook 粉絲團，提供產品、服務或品牌等最新訊息，2015 年共有3 萬人追蹤，貼文觸及777 萬人，2016 年15 萬人追蹤，貼文觸及3923 萬人。</p>
+		
+		<div class="articleTitle">
+			<h2 class="articleTitleContent">優化顧客體驗</h2>
+		</div>
+		<p>我們研發「列車座位查詢系統（SMIS）」， 將車廂座位配置圖與旅客購票資料，轉換為可於智慧型手機上顯示之圖像資料，讓列車長能即時了解列車上旅客訂位票種、乘坐區間及各車廂乘坐人數，以利提供旅客高品質之服務與協助。提供暖心服務是我們的使命，站務員與乘務員會於車站協助需要乘車導引的旅客上車。在列車上， 列車長透過SMIS 使用內部乘車導引服務管理系統，掌握服務對象，視情況指派服勤員協助。列車到站後，乘務員會協助旅客下車並交接予站務人員。當突發狀況發生導致旅客需要車站協助時，列車長會回報旅客服務控制員其身分及相關資訊，以提供最周全服務。SMIS 系統於2011 年3 月上線啟用，於2013 年12 月新增補票功能，2015 年9 月取得經濟部專利，為國內軌道運輸業之首創應用，亦為國際首創結合驗票與旅客服務功能之系統。</p>
+		
+		<div class="table_desktop">
+		<table >
+			<tr >
+				<td>
+					<img src="images/b08.jpg" alt="">
+					<p>SMIS系統畫面</p>
+				</td>
+				<td>
+					<img src="images/b09.jpg" alt="">
+					<p>SMIS之經濟部專利證書</p> 
+				</td>
+			</tr>
+		</table>
+	</div>
 
 	<div class="articleTitle">
-		<h2 class="articleTitleContent">利害關係人問卷</h2>
+		<h2 class="articleTitleContent">旅遊資訊服務</h2>
 	</div>
-	<p>台灣高速鐵路股份有限公司（以下簡稱台灣高鐵）於2009年首度發布「台灣高鐵企業社會責任白皮書」，揭露我們在社會責任的績效與作為。為因應國際趨勢與符合國內非財務資訊揭露之規範，自2015年起，報告書正式更名為「台灣高鐵企業社會責任報告書」。透過每年定期發行企業社會責任報告書，期望透過報告書、公司網頁等管道，與所有關心本公司的朋友們持續溝通。
+	<p>台灣高鐵配合4T策略，推動「搭高鐵‧遊台灣」旅遊產品，整合各地觀光資源，建立旅遊資訊平台，與國內觀光業者合作推出可訂、付、取、退全面電子化的旅遊套裝產品，目前共推出超過990種套裝行程。</p>
+	
+	<img src="images/b10.jpg" alt="" style="width: 90%; display: block; margin: 20px auto">
+	<p style="text-align: center; margin-top: -10px">互動式轉乘資訊查詢機</p>
 
-	為使本公司執行的重大性議題相關政策能夠滿足利害關係人的需要，特別規劃執行「台灣高鐵企業永續議題問卷調查」，我們非常重視您的意見，懇請您撥冗填答，俾利我們未來針對重大性考量面，規劃未來企業社會責任議題之目標與進程。感謝您協助填寫下列問卷(填寫時間約10分鐘)，本問卷所得資訊僅作為分析利害關係人關注考量面使用，不作為其他用途，感謝您的支持與協助!</p>
-	<br>
-	<p style="text-align: right;">台灣高鐵 敬啟</p>
+	<h6 class="articleTitleContent">轉運服務</h6>
+	<p>台灣高鐵轉乘服務搭配大眾交通工具，在每個營運據點提供旅客接駁服務，並且製作各車站轉乘地圖、建置轉乘資訊系統，並於高鐵企業網站提供各車站轉乘資訊查詢。</p>
+	<img src="images/b11.jpg" alt="" style="width: 90%; display: block; margin: 20px auto">
+	<p style="text-align: center; margin-top: -10px">快捷公車轉運人次</p>
+
+	<p>在2016年因應復興航空歇業，為了讓旅客可以順利前往花蓮，依據高鐵與臺鐵互相接駁之適當班次，製作「台北-花蓮雙鐵轉乘時刻表」，放置於車站服務台，提供旅客參考。</p>
+	
+	<div style="overflow: auto" class="table_m">
+		 <table align="center" border="0" cellpadding="0" cellspacing="1" style="color: rgb(0, 0, 0); line-height: 22px; " width="500">
+			<tr >
+				<td bgcolor="#db5106" style="color: #FFF">
+					<p>類型</p>
+				</td>
+				<td bgcolor="#db5106" style="color: #FFF">
+					<p>服務內容</p> 
+				</td>
+			</tr>
+			<tr >
+				<td>
+					<p>例行轉乘服務</p>
+				</td>
+				<td>
+					<p>高鐵快捷公車、臺鐵、捷運、公車/客運、排班計程車、停車場、小客車租賃和無障礙接送。</p> 
+				</td>
+			</tr>		
+			<tr >
+				<td>
+					<p>2016年新增轉乘服務</p>
+				</td>
+				<td>
+					<p>苗栗車站「101A 竹南線」和「101B 雪霸線」路線自 2016 年 12 月 2 日起，</p>
+					<p>調整部分班次發車時刻。</p>
+					<p>台中車站「161 高鐵台中站－中科管理局」路線自 2016 年 9 月 30 日起，繞</p>
+					<p>駛「臺中國家歌劇院」。</p>
+					<p>臺鐵新豐富車站將於2016年9月10日通車啟用，高鐵苗栗站轉乘更便利。</p>
+				</td>
+			</tr>
+		</table>
+	</div>
+	<p style="text-align: center; margin-top: -10px">台灣高鐵轉乘服務內容表</p>
+
+	<h6>班表政策與疏運</h6>
+	<p>台灣高鐵目前可提供運轉服務的列車計34組，列車時刻表規劃係配合不同時段之旅運需求，盡量將列車組資源投入載客之營運，提供最大運能以滿足高鐵旅運需求</p>
+
+	<img src="images/b12.jpg" alt="" style="width: 90%; display: block; margin: 20px auto">
+	<p style="text-align: center; argin-top: -10px">營運績效表</p>
+	
+	<p>本公司各疏運計畫皆經過嚴謹的內部程序制定，並提報交通部備查後執行，2015和2016年計有元旦、春節、和平紀念日、清明節、勞動節、母親節、端午節、中秋節、國慶日等重要疏運計畫，總計2015年及2016年共分別疏運839.5萬人次及1,160.4萬人次。
+	</p>
+
+	<img src="images/b13.jpg" alt="" style="width: 90%; display: block; margin: 20px auto">
+	<p style="text-align: center; margin-top: -10px">疏運規劃與執行圖</p>
+
+
 </article>
-{# here here #}
-<div class="questionnaire">
-	<section class="common_content">
-		<section class="faq_form">
-			<div class="bg_grey out_div" style="padding: 10px">
-	            <fieldset>
-	                <div class="">
-	                    <h6>您的身份? (複選)  </h6>
-	                    <div class="clear"></div>	
-	                    <input type="checkbox" name="Sex" id="aa" value="1">            
-	                    <label style=" width: auto; margin-right: 20px" for="aa">旅客</label>
 
-	                    <input type="checkbox" name="Sex" id="aa1" value="0">
-	                    <label style=" width: auto; margin-right: 20px" for="aa1">社區居民</label>
 
-	                    <input type="checkbox" name="Sex" id="aa3" value="1">            
-	                   <label style=" width: auto; margin-right: 20px" for="aa3">媒體</label>
-
-	                    <input type="checkbox" name="Sex" id="aa4" value="0">
-	                    <label style=" width: auto; margin-right: 20px" for="aa4">員工</label>
-
-	                    <input type="checkbox" name="Sex" id="aa5" value="1">            
-	                   <label style=" width: auto; margin-right: 20px" for="aa5">股東/投資人</label>
-
-	                    <input type="checkbox" name="Sex" id="aa6" value="0">
-	                    <label style=" width: auto; margin-right: 20px" for="aa6">非政府組織（NGO）</label>
-
-	                    <input type="checkbox" name="Sex" id="aa7" value="1">            
-	              		<label style=" width: auto; margin-right: 20px" for="aa7">供應商/承包商</label>
-
-	                    <input type="checkbox" name="Sex" id="aa8" value="1">
-	                    <label style=" width: auto; margin-right: 20px" for="aa8">政府/主管機關</label>
-	                </div>
-	            </fieldset>
-	        </div>
- 			<div class="out_div" style="background: #f7f7f7; padding: 10px">
-				<fieldset>
-	                <div class="faq_for_half">
-	                    <label for="">姓名</label>
-	                    <input class="" id="" name="" type="text" value="">
-	             	</div>
-	    			<div class="faq_for_half">
-	                    <label for="">公司/機構名稱</label>
-	                    <input class="" id="" maxlength="23" name="" type="text" value="">
-	                </div>
-	            </fieldset>
-            </div>
-
-            <div class="bg_grey out_div" style="background: #f7f7f7; padding: 10px">
-				<fieldset>
-					<h6>請問您是否曾經閱讀過台灣高鐵的企業社會責任報告書? </h6>
-	                <input type="radio" name="" id="Radio" value="1">            
-	                <label style=" width: auto; margin-right: 20px" for="Radio">是</label>
-
-	                <input type="radio" name="" id="Radio1" value="0">
-	               	<label style=" width: auto; margin-right: 20px" for="Radio1">否</label>
-	            </fieldset>
-            </div>
- 			<div class="out_div" style="background: #f7f7f7; padding: 10px">
-				<h6>下表為台灣高鐵企業社會責任報告書2015~2016年中所辨識出的重大性議題，供您參考以回答接下來的問卷題目。 </h6>
-				<table>
-				 	<tr>
-				 		<td>1.運輸安全管理</td>
-				 		<td>2.產品/服務品質</td>
-				 		<td>3.人文關懷與在地發展</td>
-				 		<td>4.供應商管理</td>
-				 	</tr>
-				 	<tr>
-				 		<td>5.營運策略</td>
-				 		<td>6.公司治理</td>
-				 		<td>7.疏運與轉運服務</td>
-				 		<td>8.職業安全衛生</td>
-				 	</tr>
-				 	<tr>
-				 		<td>9.員工培育與發展</td>
-				 		<td>10.招募與留任</td>
-				 		<td>11.企業形象</td>
-				 		<td>12.社會對話</td>
-				 	</tr>
-				 	<tr>
-				 		<td>13.災害預防與重大事件對策</td>
-				 		<td>14.法規遵循</td>
-				 		<td>15.氣候變遷減緩策略</td>
-				 		<td>16.降低噪音與震動</td>
-				 	</tr>		 	
-				 	<tr>
-				 		<td>17.氣候變遷調適策略</td>
-				 		<td>18.產品價格</td>
-				 		<td>19.創新服務</td>
-				 		<td>20.生態衝擊管理</td>
-
-				 	</tr>
-				 	<tr>
-				 		<td>21.營運績效</td>
-				 		<td>22.勞動權益保障</td>
-				 		<td>23.能資源使用效率</td>
-				 		<td></td>
-				 	</tr>
-				 </table> 
-				
-			<p>您依據重大性議題清單回覆以下五個問題，請依據代碼回覆:</p>
-			<p style="margin-bottom: 5px">您自己最關心的三項議題:	</p>
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<div class="clear" style="height: 25px"></div>			
-
-			
-			<p style="margin-bottom: 5px">您自己最不關心的三項議題::	</p>
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<div class="clear" style="height: 25px"></div>	
-			
-			<p style="margin-bottom: 5px">您認為台灣高鐵最關心的三項議題:	</p>
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<div class="clear" style="height: 25px"></div>	
-
-			<p style="margin-bottom: 5px">您認為台灣高鐵最不關心的三項議題:	</p>
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<div class="clear" style="height: 25px"></div>	
-
-			<p style="margin-bottom: 5px">您認為台灣高鐵最該公開揭露資訊的三項議題:	</p>
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<input id="" maxlength="23" name="" type="text" value="" style="margin-right: 10px; margin-bottom: 5px">
-			<div class="clear" style="height: 25px"></div>	
-
-			<p style="margin-bottom: 5px">您認為台灣高鐵最該公開揭露資訊的三項議題:	</p>
-			<div class="input_item">
-			<textarea name="" id="" cols="30" rows="10"></textarea>
-			</div>
-			<div class="clear" style="height: 10px"></div>	
-
-			<a href="#" class="submit_m">送出</a>
-				
-          </div>
-		</section>
-
-	</section>
-</div>
-{# here here #}
 
 
 
