--- a/views/b02_客戶關係維護.twig
+++ b/views/b02_客戶關係維護.twig
@@ -9,14 +9,14 @@
 	<p>我們以提供乘客暖心服務為中心原則，設有專門負責顧客意見之部門以維繫顧客關係，並希冀利用顧客建議來提升服務品質。我們設立多元管道聆聽顧客意見，包括在客服中心裡除國台語應對外，也配置英語專才，好兼顧外籍顧客之需求。
 	</p>
 
-	<img src="images/b14.jpg" alt="">
+	<img src="http://www.thsrc.com.tw/event/tmp/img/b14.jpg" alt="">
 	<p style="text-align: center; margin-top: -40px">現行意見蒐集管道及客服作業體系</p>
 
-		<img src="images/b15.jpg" alt="">
+		<img src="http://www.thsrc.com.tw/event/tmp/img/b15.jpg" alt="">
 	<p style="text-align: center; margin-top: -40px">現行客訴問題解決機制</p>
 	<p>在顧客資料保護方面，內部系統僅保留敬老與愛心票之身分證字號、出生年月日等資料，其他身分之客戶資料皆不保存，且為保障顧客個人資料，除公告「顧客個人資料保護權益事項」外，也推動多項管理措施，包括「個人資料保護政策」、「個人資料檔案安全維護計畫」，做為個人資料處理作業之準據，確保各單位在日常作業執行過程中，於個人資料之蒐集、處理與利用符合相關法令要求，避免發生缺失情形。我們的「個人資料保護作業執行組」每年定期召開「個人資料保護作業管理會議」，檢討有關個人資料保護事宜。高鐵企業網站特別設有「個人資料保護專區」，公告以上相關文件供社會大眾檢視參考。</p>
 	
-	<img src="images/b16.jpg" alt="">
+	<img src="http://www.thsrc.com.tw/event/tmp/img/b16.jpg" alt="">
 
 	
 </article>
