--- a/views/a06_利害關係人專區_m.twig
+++ b/views/a06_利害關係人專區_m.twig
@@ -304,7 +304,45 @@
 
 <div class="out_div" style="background: #f7f7f7; padding: 10px">
 <h4>下表為台灣高鐵企業社會責任報告書2015~2016年中所辨識出的重大性議題，供您參考以回答接下來的問卷題目。</h4>
+<table>
+				 	<tr>
+				 		<td style="width:20%">1.運輸安全管理</td>
+				 		<td >2.產品/服務品質</td>
+				 		<td >3.人文關懷與在地發展</td>
+				 		<td >4.供應商管理</td>
+				 	</tr>
+				 	<tr>
+				 		<td>5.營運策略</td>
+				 		<td>6.公司治理</td>
+				 		<td>7.疏運與轉運服務</td>
+				 		<td>8.職業安全衛生</td>
+				 	</tr>
+				 	<tr>
+				 		<td>9.員工培育與發展</td>
+				 		<td>10.招募與留任</td>
+				 		<td>11.企業形象</td>
+				 		<td>12.社會對話</td>
+				 	</tr>
+				 	<tr>
+				 		<td>13.災害預防與重大事件對策</td>
+				 		<td>14.法規遵循</td>
+				 		<td>15.氣候變遷減緩策略</td>
+				 		<td>16.降低噪音與震動</td>
+				 	</tr>		 	
+				 	<tr>
+				 		<td>17.氣候變遷調適策略</td>
+				 		<td>18.產品價格</td>
+				 		<td>19.創新服務</td>
+				 		<td>20.生態衝擊管理</td>
 
+				 	</tr>
+				 	<tr>
+				 		<td>21.營運績效</td>
+				 		<td>22.勞動權益保障</td>
+				 		<td>23.能資源使用效率</td>
+				 		<td></td>
+				 	</tr>
+				 </table>
 
 
 <H4>您依據重大性議題清單回覆以下五個問題，請依據代碼回覆:</h4>
