--- a/views/a06_利害關係人專區_m.twig
+++ b/views/a06_利害關係人專區_m.twig
@@ -287,6 +287,38 @@
 
 <div class="out_div" style="background: #f7f7f7; padding: 10px">
 <fieldset>
+      <p style="margin-bottom: 5px">您的身份? (複選)</p>
+	 	 <input type="checkbox" name="Sex" id="aa" value="1">            
+        <label style=" width: auto; margin-right: 20px" for="aa">旅客</label>
+
+        <input type="checkbox" name="Sex" id="aa1" value="0">
+        <label style=" width: auto; margin-right: 20px" for="aa1">社區居民</label>
+
+        <input type="checkbox" name="Sex" id="aa3" value="1">            
+       <label style=" width: auto; margin-right: 20px" for="aa3">媒體</label>
+
+        <input type="checkbox" name="Sex" id="aa4" value="0">
+        <label style=" width: auto; margin-right: 20px" for="aa4">員工</label>
+
+        <input type="checkbox" name="Sex" id="aa5" value="1">            
+       <label style=" width: auto; margin-right: 20px" for="aa5">股東/投資人</label>
+
+        <input type="checkbox" name="Sex" id="aa6" value="0">
+        <label style=" width: auto; margin-right: 20px" for="aa6">非政府組織（NGO）</label>
+
+        <input type="checkbox" name="Sex" id="aa7" value="1">            
+  		<label style=" width: auto; margin-right: 20px" for="aa7">供應商/承包商</label>
+
+        <input type="checkbox" name="Sex" id="aa8" value="1">
+        <label style=" width: auto; margin-right: 20px" for="aa8">政府/主管機關</label>
+	 
+	<div class="clear" style="height: 25px">&nbsp;</div>
+</fieldset>
+</div>
+
+
+<div class="out_div" style="background: #f7f7f7; padding: 10px">
+<fieldset>
       <p style="margin-bottom: 5px">姓名</p>
 <input id="" maxlength="23" name="" style="margin-right: 10px;" type="text" value="" /> 
       <p style="margin-bottom: 5px">公司/機構名稱</p>
